<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.cii.messaging</groupId>
	<artifactId>cii-messaging-parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>CII Messaging Parent</name>
	<description>Parent POM for Cross Industry Invoice messaging system</description>

	<properties>
                <java.version>21</java.version>
                <maven.compiler.source>21</maven.compiler.source>
                <maven.compiler.target>21</maven.compiler.target>
                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

                <!-- UN/CEFACT schema version (can be overridden via -Dunece.version or env) -->
                <unece.version>D23B</unece.version>

		<!-- Dependencies versions -->
                <jakarta.xml.bind.version>4.0.2</jakarta.xml.bind.version>
                <jaxb-runtime.version>4.0.5</jaxb-runtime.version>
                <jaxb-impl.version>4.0.5</jaxb-impl.version>
                <mustang.version>2.19.0</mustang.version>
                <ph-schematron.version>5.6.5</ph-schematron.version>
                <xerces.version>2.12.2</xerces.version>
                <saxon.version>12.8</saxon.version>
                <junit.version>5.13.4</junit.version>
                <jackson.version>2.20.0</jackson.version>
                <slf4j.version>2.0.17</slf4j.version>
                <logback.version>1.5.18</logback.version>
                <lombok.version>1.18.40</lombok.version>
        </properties>

        <modules>
                <module>cii-model</module>
                <module>cii-reader</module>
                <module>cii-writer</module>
                <module>cii-validator</module>
                <module>cii-cli</module>
                <module>cii-samples</module>
        </modules>

	<dependencyManagement>
		<dependencies>
			<!-- JAXB -->
			<dependency>
				<groupId>jakarta.xml.bind</groupId>
				<artifactId>jakarta.xml.bind-api</artifactId>
				<version>${jakarta.xml.bind.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>${jaxb-impl.version}</version>
			</dependency>

			<!-- Mustang Project for ZUGFeRD/CII -->
			<dependency>
				<groupId>org.mustangproject</groupId>
				<artifactId>library</artifactId>
				<version>${mustang.version}</version>
			</dependency>

                        <!-- XML Processing -->
                        <dependency>
                                <groupId>xerces</groupId>
                                <artifactId>xercesImpl</artifactId>
                                <version>${xerces.version}</version>
                                <exclusions>
                                        <exclusion>
                                                <groupId>xml-apis</groupId>
                                                <artifactId>xml-apis</artifactId>
                                        </exclusion>
                                </exclusions>
                        </dependency>
			<dependency>
				<groupId>net.sf.saxon</groupId>
				<artifactId>Saxon-HE</artifactId>
				<version>${saxon.version}</version>
			</dependency>

			<!-- JSON Processing -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-xml</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<!-- Logging -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>

			<!-- Utilities -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- Testing -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
                                        <version>3.14.0</version>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-surefire-plugin</artifactId>
                                        <version>3.5.3</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
